src/test/deca/context/invalid/declMethod-paramVoid.deca
class A {
    void method(void a) {
    }
}